[package]
name = "anchor-client"
version = "0.28.0"
authors = ["Anchor Maintainers <accounts@200ms.io>"]
rust-version = "1.60"
edition = "2021"
license = "Apache-2.0"
description = "Rust client for Anchor programs"

[features]
async = []
debug = []

[dependencies]
anchor-lang = { path = "../lang", version = "0.28.0" }
anyhow = "1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
solana-client = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-sdk = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
solana-account-decoder = { git = "https://github.com/hlgltvnnk/solana.git", branch = "update-dependencies" }
thiserror = "1"
tokio = { version = "1", features = ["rt", "sync"] }
url = "2.4.0"
